--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -16,7 +16,7 @@ sitemap: false
 @import "mixins";
 @import "normalize";
 @import "site";
-@import "../../_sass/typography.scss";
+@import "typography";
 @import "elements";
 @import "syntax";
 @import "nav";
