--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,13 +17,14 @@ layout: compress
             <div class="content">
                 <div class="post-title {% if page.feature %} feature {% endif %}">
                     <h1>{{ page.title }}</h1>
-                    <h4>{{ page.date | date_to_string }}</h4>
+                    <!--<h4>{{ page.date | date_to_string }}</h4>-->
                     {% if site.reading_time %}
                     <p class="reading-time">
                       <i class="fa fa-clock-o"></i>
                       {% include read-time.html %}
                     </p><!-- /.entry-reading-time -->
                     {% endif %}
+                    <!--
                     {% if page.project %}
                     <a class="btn zoombtn" href="{{site.url}}/projects/">
                     {% else %}
@@ -31,6 +32,7 @@ layout: compress
                     {% endif %}
                         <i class="fa fa-chevron-left"></i>
                     </a>
+                    -->
                 </div>
                 {{ content }}
                 <div class="entry-meta">
