--- a/_includes/google_analytics.html
+++ b/_includes/google_analytics.html
@@ -1,4 +1,5 @@
-<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. Then uncomment 
+
 <script>
    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -9,3 +10,5 @@ ga('create', '{{ site.google_analytics }}', 'auto');
 ga('send', 'pageview');
 
 </script>
+
+ -->
