--- a/_layouts/embed.html
+++ b/_layouts/embed.html
@@ -6,8 +6,8 @@
 
 {% include head.html %}
 
-<body>
-<div style="padding: 50px;">   
+<body style="background-color: #3283BE; padding: 50px;">  
+<div style="border-radius: 10px; background-color: white; padding-top: 25px; padding-bottom: 25px;">
 <div class="post">
   {% if page.image %}
     <div class="featuredImage">
@@ -20,6 +20,6 @@
 
 </div>
     </div>
-    
+    {% include footer.html %}
     {% include scripts.html %}
 </body>
