improve bg color for embeds

--- a/_layouts/embed.html
+++ b/_layouts/embed.html
@@ -6,7 +6,7 @@
 
 {% include head.html %}
 
-<body style="background-color: #3283BE; padding: 50px;">  
+<body style="background-color: #3C3F41; padding: 50px;">  
 <div style="border-radius: 10px; background-color: white; padding-top: 25px; padding-bottom: 25px;">
 <div class="post">
   {% if page.image %}
