--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
 <div class="footer">
    <div class="container">
-      <!--
-<p class="copy">&copy; {{ site.time | date: '%Y' }} <a href="http://brianmaierjr.com">Brian Maier Jr.</a> Powered by <a href="http://jekyllrb.com">Jekyll</a></p>
--->
+
+<p class="copy">A work in progress by <a href="twitter.com/dmcwo">dmcwo</a>.</p>
+
 
       <div class="footer-links"> 
          <ul class="noList"> 
