--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,6 +18,9 @@
 
     <!-- Modernizr -->
     <script src="{{ "/assets/js/modernizr.custom.15390.js" | prepend: site.baseurl }}" type="text/javascript"></script>
+    
+    <!-- For simple collapse <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
+    
 
     {% if site.google_analytics %} {% include google_analytics.html %} {% endif %}
 </head>
