--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -4,3 +4,6 @@
 <script src="{{ '/assets/js/dropcap.min.js' | prepend: site.baseurl }}"></script>
 <script src="{{ '/assets/js/responsive-nav.min.js' | prepend: site.baseurl }}"></script>
 <script src="{{ '/assets/js/scripts.js' | prepend: site.baseurl }}"></script>
+<!-- For simple collapse http://www.w3schools.com/Bootstrap/tryit.asp?filename=trybs_collapsible&stacked=h -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
