trying out materialize

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,6 +18,24 @@
 
     <!-- Modernizr -->
     <script src="{{ "/assets/js/modernizr.custom.15390.js" | prepend: site.baseurl }}" type="text/javascript"></script>
+    
+    <!--Materialize-->
+      <!--Import Google Icon Font-->
+      <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <!--Import materialize.css-->
+      <link type="text/css" rel="stylesheet" href="{{ "/css/materialize.min.css"  | prepend: site.baseurl | prepend: site.url }}"  media="screen,projection"/>
+    
+    
+      <!--Let browser know website is optimized for mobile (leaving this out for now):
+      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>-->
+    
+
+    
+    <!--End Materialize-->
+    
+    
+
+
 
     {% if site.google_analytics %} {% include google_analytics.html %} {% endif %}
 </head>
