--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -4,3 +4,10 @@
 <script src="{{ '/assets/js/dropcap.min.js' | prepend: site.baseurl }}"></script>
 <script src="{{ '/assets/js/responsive-nav.min.js' | prepend: site.baseurl }}"></script>
 <script src="{{ '/assets/js/scripts.js' | prepend: site.baseurl }}"></script>
+
+<!--Materialize-->
+<!--Import jQuery before materialize.js-->
+      <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script> <!-- Two of these? Earlier version above. Problem? -->
+      <script type="text/javascript" src="{{ "/js/materialize.min.js" | prepend: site.baseurl | prepend: site.url }}"></script>
+
+<!--End Materialize-->
