--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,7 +23,7 @@
       <!--Import Google Icon Font-->
       <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <!--Import materialize.css-->
-      <link type="text/css" rel="stylesheet" href="{{ "/css/materialize.min.css"  | prepend: site.baseurl | prepend: site.url }}"  media="screen,projection"/>
+      <link type="text/css" rel="stylesheet" href="{{ "/css/materialize.min.css"  | prepend: site.baseurl }}"  media="screen,projection"/>
     
     
       <!--Let browser know website is optimized for mobile (leaving this out for now):
