--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,6 @@
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <title>{{ page.title }}</title>
@@ -13,16 +13,9 @@
     
     <!--Materialize-->
       <!--Import Google Icon Font-->
-      <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <!--Import materialize.css-->
       <link type="text/css" rel="stylesheet" href="{{ "/css/materialize.min.css"  | prepend: site.baseurl }}"  media="screen,projection"/>
-    
-    
-      <!--Let browser know website is optimized for mobile (leaving this out for now):
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>-->
-    
-
-    
     <!--End Materialize-->
     
     <!-- Stylesheet -->
