--- a/_includes/embed-code.html
+++ b/_includes/embed-code.html
@@ -7,7 +7,7 @@
 <div class="highlighter-rouge">
     <pre class="highlight">
         <code>
-            <iframe src="{{ site.url }}/embeds{{ page.url }}" width="80%" height="600px"></iframe>
+            &lt;iframe src="{{ site.url }}/embeds{{ page.url }}" width="80%" height="600px"&gt;&lt;/iframe&gt;
         </code>
     </pre>
 </div>
