fixing post order

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-{% for post in site.posts %}
+{% for post in site.posts reversed %}
 <div class="row">
     <div class="col s12 m6">
       <div class="card">
