--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,10 +14,12 @@
     <!--Fonts-->
       <!--Import Google Icon Font-->
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Lora|Open+Sans|Open+Sans+Condensed:300|PT+Serif" rel="stylesheet">
+    
     
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="{{ "/assets/css/style.css" | prepend: site.baseurl }}">
     <link rel="stylesheet" href="{{ "/assets/css/materialize.css"  | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/assets/css/style.css" | prepend: site.baseurl }}">
     <!--[if IE 8]><link rel="stylesheet" href="{{ "/assets/css/ie.css" | prepend: site.baseurl }}"><![endif]-->
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
