--- a/assets/css/materialize.css
+++ b/assets/css/materialize.css
@@ -2868,7 +2868,7 @@ ul.staggered-list li {
 footer.page-footer {
   margin-top: 20px;
   padding-top: 20px;
-  background-color: $primary-color;
+  background-color: #0d47a1;
 }
 
 footer.page-footer .footer-copyright {
