fixing some spacing on embed layout

--- a/_layouts/embed.html
+++ b/_layouts/embed.html
@@ -7,7 +7,7 @@
 {% include head.html %}
 
 <body style="background-color: #3C3F41; padding: 50px;">  
-<div style="border-radius: 10px; background-color: white; padding-top: 25px; padding-bottom: 25px;">
+<div style="border-radius: 10px; background-color: white; padding-top: 25px; padding-bottom: 25px; padding-left: 50px; padding-right: 50px;">
 <div class="post">
   {% if page.image %}
     <div class="featuredImage">
