--- a/_includes/side-nav.html
+++ b/_includes/side-nav.html
@@ -1,17 +1,19 @@
 <ul id="slide-out" class="side-nav">
-    <li><div class="userView">
-      <div class="background">
-        <img src="http://lorempixel.com/g/400/400/abstract">
-      </div>
-      <a href="#!user"><img class="circle" src="http://lorempixel.com/400/400/cats"></a>
-      <a href="#!name"><span class="white-text name">Mr. Hyde</span></a>
-      <a href="#!email"><span class="white-text email">hyde-(at)-jekyll.org</span></a>
-    </div></li>
-    <li><a href="#!"><i class="material-icons">cloud</i>First Link With Icon</a></li>
-    <li><a href="#!">Second Link</a></li>
+<li><div class="divider"></div></li>
+    
+{% for link in site.data.navigation.main %}
+            {% if link.url contains 'http' %}
+              {% assign domain = '' %}
+            {% else %}
+              {% assign domain = site.url | append: site.baseurl %}
+            {% endif %}
+            <li><a href="{{ domain }}{{ link.url }}"><i class="material-icons">{{ link.icon }}</i>{{ link.title }}</a></li>
+{% endfor %}
+    
     <li><div class="divider"></div></li>
-    <li><a class="subheader">Subheader</a></li>
-    <li><a class="waves-effect" href="#!">Third Link With Waves</a></li>
-    <li><a class="subheader">Subheader 2</a></li>
-  </ul>
+    <li><a class="subheader">Research Tips</a></li>    
+    {% for post in site.posts reversed %}
+    <li class="truncate waves-effect"><a href="{{ post.url | prepend: site.baseurl }}"><i class="material-icons">keyboard_arrow_right</i> {{ post.title }}</a></li>
+    {% endfor %}
+</ul>
 <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a> 
