--- a/_includes/embed-and-share.html
+++ b/_includes/embed-and-share.html
@@ -19,7 +19,7 @@
       
       <div class="highlighter-rouge">
 <pre class="highlight">
-<code>&lt;iframe src="{{ site.url }}/embeds{{ page.url }}" width="80%" height="600px"&gt;&lt;/iframe&gt;</code>
+<code>&lt;iframe src="{{ site.url }}{{ site.baseurl }}/embeds{{ page.url }}" width="80%" height="600px"&gt;&lt;/iframe&gt;</code>
 </pre>
     </div>
       
