--- a/_layouts/embed.html
+++ b/_layouts/embed.html
@@ -14,7 +14,7 @@
         <img src="{{ '/assets/img/' | prepend: site.baseurl | append: page.image }}" alt="" />
       </div>
   {% endif %}
-  <h1 class="postTitle">{{ page.title }}</h1>
+  <!--<h1 class="postTitle">{{ page.title }}</h1>-->
   <!-- <p class="meta">{{ page.date | date: '%B %d, %Y' }} | <span class="time">{{ page.content | number_of_words | divided_by:180 }}</span> Minute Read</p> -->    
   {{ content }}
 
