--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,8 +2,11 @@
 layout: default
 ---
 {% for post in site.posts reversed %}
+
+<!-- Create cards -->
+
 <div class="row">
-    <div class="col s12 m8">
+    <div class="col s12 m12">
       <div class="card">
         <div class="card-content">
             <span class="card-title"><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></span>
@@ -14,8 +17,35 @@ layout: default
           <a href="{{ post.url | prepend: site.baseurl }}">
             Read More
           </a>
+          <a href="#modal-{{ post.category}}">
+            &lt; Embed &gt;
+          </a>
         </div>
       </div>
     </div>
 </div>
+
+<!-- Create modal content -->
+
+<div id="modal-{{ post.category}}" class="modal modal-fixed-footer">
+    <div class="modal-content">
+      <p>Copy and paste the html code below to embed this research strategy into your site:</p>
+      
+<div class="highlighter-rouge">
+<pre class="highlight">
+<code>&lt;iframe src="{{ site.url }}{{ site.baseurl }}/embeds{{ post.url }}" width="100%" height="400px"&gt;&lt;/iframe&gt;</code>
+</pre>
+    </div>
+    
+<h6>Preview:</h6>
+    
+    <iframe src="{{ site.url }}{{ site.baseurl }}/embeds{{ post.url }}" width="100%" height="400px"></iframe>
+
+      
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Got it!</a>
+    </div>
+</div>
+
 {% endfor %}
