--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,7 +14,8 @@
     <!--Fonts-->
       <!--Import Google Icon Font-->
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <link href="https://fonts.googleapis.com/css?family=Lora|Open+Sans|Open+Sans+Condensed:300|PT+Serif" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Open+Sans|Open+Sans+Condensed:300|PT+Serif" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet">
     
     
     <!-- Stylesheets -->
