--- a/_layouts/embed.html
+++ b/_layouts/embed.html
@@ -6,8 +6,9 @@
 
 {% include head.html %}
 
-<body style="background-color: #3C3F41; padding: 50px;">  
-<div style="border-radius: 10px; background-color: white; padding-top: 25px; padding-bottom: 25px; padding-left: 50px; padding-right: 50px;">
+<body id="embedded">
+    
+<div class="embeddtainer">
 <div class="post">
   {% if page.image %}
     <div class="featuredImage">
