--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,7 +1,11 @@
 <!-- Add jQuery and other scripts -->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="{{ \'/assets/js/jquery-1.11.2.min.js\' | prepend: site.baseurl }}"><\/script>')</script>
+
+<!-- Temporarily get rid of drop cap for embeds -->
+{% if page.layout != "embed" %}
 <script src="{{ '/assets/js/dropcap.min.js' | prepend: site.baseurl }}"></script>
+{% endif %}
 <script src="{{ '/assets/js/responsive-nav.min.js' | prepend: site.baseurl }}"></script>
 <script src="{{ '/assets/js/scripts.js' | prepend: site.baseurl }}"></script>
 
