--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,10 +12,12 @@
     <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
     
     <!--Fonts-->
-      <!--Import Google Icon Font-->
+      <!--Import Google Icon Fonts-->
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Open+Sans|Open+Sans+Condensed:300|PT+Serif" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet">
+      <!--Font Awesome-->
+      <script src="https://use.fontawesome.com/c7408e4f19.js"></script>
     
     
     <!-- Stylesheets -->
