--- a/_includes/embed-and-share.html
+++ b/_includes/embed-and-share.html
@@ -21,12 +21,17 @@
 <code>&lt;iframe src="{{ site.url }}{{ site.baseurl }}/embeds{{ page.url }}" width="100%" height="400px"&gt;&lt;/iframe&gt;</code>
 </pre>
     </div>
+    <ul class="collapsible" data-collapsible="accordion">
+        <li>
+            <div class="collapsible-header" style="border-bottom-style: solid;"><a href="{{ site.url }}{{ site.baseurl }}/embeds{{ page.url }}" target="preview-frame" style="display: block;"><i class="material-icons">pageview</i>Preview:
+            </a></div>
+            <div class="collapsible-body">
+                <iframe src="{{ site.url }}{{ site.baseurl }}/embeds{{ page.url }}" width="100%" height="400px" name="preview-frame" style="border-style: none;"></iframe>
+            </div> 
+        </li>
+        
+    </ul>
     
-    <h6>Preview:</h6>
-    
-    <iframe src="{{ site.url }}{{ site.baseurl }}/embeds{{ page.url }}" width="100%" height="400px"></iframe>
-
-      
     </div>
     <div class="modal-footer">
       <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Got it!</a>
