--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -41,9 +41,16 @@ layout: default
 </pre>
     </div>
     
-<h6>Preview:</h6>
-    
-    <iframe src="{{ site.url }}{{ site.baseurl }}/embeds{{ post.url }}" width="100%" height="400px"></iframe>
+<ul class="collapsible" data-collapsible="accordion">
+        <li>
+            <div class="collapsible-header" style="border-bottom-style: solid;"><a href="{{ site.url }}{{ site.baseurl }}/embeds{{ post.url }}" target="preview-frame{{ post.url }}" style="display: block;"><i class="material-icons">pageview</i>Preview:
+            </a></div>
+            <div class="collapsible-body">
+                <iframe src="{{ site.url }}{{ site.baseurl }}/embeds{{ post.url }}" width="100%" height="400px" name="preview-frame{{ post.url }}" style="border-style: none;"></iframe>
+            </div> 
+        </li>
+        
+    </ul>
 
       
     </div>
