--- a/_includes/embed-and-share.html
+++ b/_includes/embed-and-share.html
@@ -1,10 +1,17 @@
 <!-- begin embed code -->
 
 <!-- this places a floating button in the bottom right corner -->
-<div class="fixed-action-btn">
-    <a class="btn-floating btn-large blue lighten-1" href="#modal1">
-      <i class="large material-icons">code</i>
+<div class="fixed-action-btn horizontal">
+    <a class="btn-floating btn-large blue lighten-1">
+      <i class="large material-icons">share</i>
     </a>
+    <ul>
+        <li><a class="btn-floating blue lighten-1" href="#modal1"><i class="large material-icons">code</i></a></li>
+        <li><a class="btn-floating blue lighten-1" href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{site.url}}{{ site.baseurl }}{{ page.url }}&via={{ site.social.twitter }}&related={{ site.social.twitter }}" rel="nofollow" target="_blank" title="Share on Twitter" aria-label="Twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+        <li>
+            <a class="btn-floating blue lighten-1" href="https://facebook.com/sharer.php?u={{site.url}}{{ site.baseurl }}{{ page.url }}" rel="nofollow" target="_blank" title="Share on Facebook" aria-label="Facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+        </li>
+    </ul>
 
 </div>
   
