--- a/_layouts/embed.html
+++ b/_layouts/embed.html
@@ -75,6 +75,19 @@
     <!-- Two of these? Earlier version above. Problem? -->
     <script type="text/javascript" src="{{ "/assets/js/materialize.js" | prepend: site.baseurl }}"></script>
     <script type="text/javascript" src="{{ "/assets/js/materialize-readies.js" | prepend: site.baseurl }}"></script>
+    
+<!--Google Analytics -->
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-79667939-2', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </body>
 
 </html>
