--- a/_layouts/embed.html
+++ b/_layouts/embed.html
@@ -18,7 +18,7 @@
     <!--[if IE 8]><link rel="stylesheet" href="../assets/css/ie.css"><![endif]-->
     <!-- Reveal.js Stylesheets -->
     <link rel="stylesheet" href="{{ "/assets/reveal/css/reveal.css" | prepend: site.baseurl }}">
-    <link rel="stylesheet" href="{{ "/assets/reveal/css/theme/simple.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/assets/reveal/css/theme/" | prepend: site.baseurl | append: page.theme | append: ".css" }}">
     <!-- Theme used for syntax highlighting of code -->
     <link rel="stylesheet" href="{{ "/assets/reveal/lib/css/zenburn.css" | prepend: site.baseurl }}">
     <!-- Custom reveal css -->
@@ -35,7 +35,7 @@
 
 <body id="embeds-slide">
     <div class="reveal">
-        <div class="slides">
+        <div class="slides" style="text-align: left;">
             <!-- Begin Content -->
             {{ content }}
             <!-- End Content -->
