--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<nav class="light-blue lighten-1" role="navigation">
+<nav class="ucla-color blue" role="navigation">
     <div class="nav-wrapper container"><a id="logo-container" href="{{ site.baseurl }}/" class="brand-logo"> {{ site.title }} </a>
      <ul class="right hide-on-med-and-down">
       {% for link in site.data.navigation.main %}
