--- a/_includes/embed-and-share.html
+++ b/_includes/embed-and-share.html
@@ -11,7 +11,7 @@
             {% if page.handout contains 'http' %}
                 <a class="btn-floating ucla-color three-veronica" href="{{ page.handout }}" target="_blank" title="PDF Handout" aria-label="Handout"><i class="fa fa-file-pdf-o" aria-hidden="true"></i></a>
             {% else %}
-                <a class="btn-floating ucla-color three-veronica" href="{{ site.url }}/{{ page.handout }}" target="_blank" title="PDF Handout" aria-label="Handout"><i class="fa fa-file-pdf-o" aria-hidden="true"></i></a>
+                <a class="btn-floating ucla-color three-veronica" href="{{ site.url }}{{ site.baseurl }}{{ page.handout }}" target="_blank" title="PDF Handout" aria-label="Handout"><i class="fa fa-file-pdf-o" aria-hidden="true"></i></a>
             {% endif %}
             </li>
         {% endif %}
