homepage displaying correctly

--- a/_includes/front-head.html
+++ b/_includes/front-head.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="{{ "/assets/css/animate.min.css" | prepend: site.baseurl }}" type="text/css">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="{{ "/assets/css/front-main.css" | prepend: site.baseurl }} type="text/css">
+    <link rel="stylesheet" href="{{ "/assets/css/front-main.css" | prepend: site.baseurl }}" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
