--- a/_sass/_front-base.scss
+++ b/_sass/_front-base.scss
@@ -155,7 +155,7 @@ header {
     min-height: auto;
     @include background-cover;
     background-position: center;
-    background-image: url('../img/header.jpg');
+    background-image: url('../img/front/header.jpg');
     text-align: center;
     color: #00A5E5; // white;
     .header-content {
