background and copy
added a semi-transparent background behind header text. Tried out a few
different approaches to headlines and about text.

--- a/_includes/front-header.html
+++ b/_includes/front-header.html
@@ -1,10 +1,10 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h1>Research Tips <br> &amp; Strategies</h1>
+            <h1>Strategies for Research and Writing<!-- once we have decided on a new title change this to {{ site.title }} --></h1>
             <hr>
-            <p>Welcome to our collection of tips and strategies to help you get started on your research projects. </p>
-       <!--     <a href="#portfolio" class="btn btn-primary btn-xl page-scroll">Get started!</a> -->
+            <p>Quick and practical research and writing advice, collaboratively designed by students and teachers at UCLA.<!-- once we have decided on a new title change this to {{ site.description }} --></p>
+       <a href="#about" class="btn btn-primary btn-xl page-scroll">Learn more</a> <!--<a href="#portfolio" class="btn btn-primary btn-xl page-scroll">Get started!</a>-->
         </div>
     </div>
 </header>
