--- a/_includes/front-call-to-action.html
+++ b/_includes/front-call-to-action.html
@@ -5,10 +5,9 @@
                 <h2 class="section-heading">Hey there, Bruins!</h2>
                 <hr class="light">
                 <p class="text-faded">
-                    We're WI+RE (Writing Instruction + Research Education), a collaborative UCLA community focused on helping all learners succeed in their writing and research projects.
-              We make short, practical tools that you can quickly view online. We are developing and continually improving a toolbox of open-access online learning modules that can be used by both instructors and students.
-              </p>
-                <a href="#" class="btn btn-default btn-xl">Get Started!</a>
+                    We're WI+RE (Writing Instruction + Research Education), a collaborative UCLA community focused on helping all learners succeed in their writing and research projects.</p>
+                    
+                <a href="#portfolio" class="btn btn-default btn-xl page-scroll">Get Started!</a>
             </div>
         </div>
     </div>
