--- a/_sass/_front-base.scss
+++ b/_sass/_front-base.scss
@@ -164,11 +164,16 @@ header {
         padding: 100px 15px 100px;
         width: 100%;
         .header-content-inner {
+            background-color: rgba(255, 255, 255, 0.9);
+            padding-bottom: 30px;
+            padding-top: 30px;
+            // border-radius: 10px;
             h1 {
                 font-weight: 700;
                 text-transform: uppercase;
                 margin-top: 0;
                 margin-bottom: 0;
+                // text-shadow: 2px 2px #8237ff;
             }
             hr {
                 margin: 30px auto;
