--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -7,7 +7,7 @@
   {% include front-nav.html %}
   {% include front-header.html %}
   {% include front-call-to-action.html %}
-  <!-- {% include front-services.html %} -->
+  {% include front-services.html %}
   {% include front-portfolio.html %}
   {% include front-open.html %}
   {% include front-contact.html %}
