--- a/_includes/front-portfolio.html
+++ b/_includes/front-portfolio.html
@@ -2,15 +2,15 @@
     <div class="container-fluid">
         <div class="row no-gutter">
             <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
+                <a href="{{ "/categories/getting-started" | prepend: site.baseurl}}" class="portfolio-box">
                     <img src="{{ "/assets/img/front/portfolio/1.jpg" | prepend: site.baseurl}}" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                Category:
                             </div>
                             <div class="project-name">
-                                Project Name
+                                Getting Started
                             </div>
                         </div>
                     </div>
@@ -22,10 +22,10 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                Category:
                             </div>
                             <div class="project-name">
-                                Project Name
+                                Finding and Citing Sources
                             </div>
                         </div>
                     </div>
@@ -40,7 +40,7 @@
                                 Category
                             </div>
                             <div class="project-name">
-                                Project Name
+                                Project
                             </div>
                         </div>
                     </div>
