--- a/_includes/front-services.html
+++ b/_includes/front-services.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">At Your Service</h2>
+                <h2 class="section-heading">Collections/Categories/...?</h2>
                 <hr class="primary">
             </div>
         </div>
@@ -12,8 +12,8 @@
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i>
-                    <h3>Sturdy Templates</h3>
-                    <p class="text-muted">Our templates are updated regularly so they don't break.</p>
+                    <h3><a href="{{ "/categories/getting-started" | prepend: site.baseurl}}">Getting Started</a></h3>
+                    <p class="text-muted">Generating research questions, planning your project, and getting ready for research.</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
