--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -8,12 +8,8 @@ layout: default
   <p>{{ page.content }}</p>
 {% endunless %}
 
-{% unless site.categories.[page.selectedcat] | size > 0 %}
-  <p>No posts in this category at this time.</p>
-{% endunless %}
-
 <!-- Create cards -->
-{% for post in site.categories.[page.selectedcat] reversed %}
+{% for post in site.categories[page.title] reversed %}
 <div class="row">
     <div class="col s12 m12">
       <div class="card">
@@ -25,7 +21,7 @@ layout: default
           <a href="{{ post.url | prepend: site.baseurl }}">
             Read More
           </a>
-          <a class="rightaction" href="#modal-{{ post.category}}" aria-label="Embed code">
+          <a class="rightaction" href="#modal-{{ post.url}}" aria-label="Embed code">
             <i class="fa fa-code" aria-hidden="true"></i>
               <!-- &lt; Embed &gt; -->
           </a>
@@ -45,10 +41,63 @@ layout: default
 </div>
 {% endfor %}
 
+<!-- *** -->
+<!-- Category NAVIGATION with cards-->
+<!-- *** -->
+
+<hr>
+
+<div class="row">
+    {% if page.previous.url %}
+    <!-- Card 1 -->
+        <div class="col s6">
+          <div class="card hoverable">
+            <a href="{{ page.previous.url | prepend: site.baseurl }}">
+                <div class="card-content">
+              <!--<span class="card-title waves-effect"><a href="{{ page.previous.url | prepend: site.baseurl }}"><i class="material-icons">chevron_left</i>&nbsp;{{ page.previous.title }}</a></span>-->
+                <i class="material-icons">chevron_left</i>&nbsp;{{ page.previous.title }}
+              <!--<p>I am a very simple card. I am good at containing small bits of information.
+              I am convenient because I require little markup to use effectively.</p>-->
+            </div>
+                </a>
+            <!--
+            <div class="card-action">
+              <a href="#">This is a link</a>
+              <a href="#">This is a link</a>
+            </div>
+            -->
+          </div>
+        </div>
+    {% endif %}
+    
+
+    {% if page.next.url %}  
+        <!-- Card 2 -->
+            <div class="col s6"> <!-- offset-s6 should have worked -->
+          <div class="card hoverable">
+              <a href="{{ page.next.url | prepend: site.baseurl }}">
+              <div class="card-content" style="text-align: right;">
+              <!--<span class="card-title waves-effect"><a href="{{ page.next.url | prepend: site.baseurl }}">{{ page.next.title }}&nbsp;<i class="material-icons">chevron_right</i></a></span>-->
+                  {{ page.next.title }}&nbsp;<i class="material-icons">chevron_right</i>
+            </div>
+            </a>
+            <!--
+            <div class="card-action">
+              <a href="#">This is a link</a>
+              <a href="#">This is a link</a>
+            </div>
+            -->
+          </div>
+        </div>
+    {% endif %}
+    
+</div>
+    
+
 
 <!-- Create modal content -->
-{% for post in site.categories.[page.selectedcat] reversed %}
-<div id="modal-{{ post.category}}" class="modal modal-fixed-footer">
+{% for post in site.categories[page.title] reversed %}
+<div id="modal-{{ post.url}}" class="modal modal-fixed-footer">
     <div class="modal-content">
       <p>Copy and paste the html code below to embed this research strategy into your site:</p>
       
@@ -57,4 +106,22 @@ layout: default
 <code>&lt;iframe src="{{ site.url }}{{ site.baseurl }}/embeds{{ post.url }}" width="100%" height="400px"&gt;&lt;/iframe&gt;</code>
 </pre>
     </div>
+    
+<ul class="collapsible" data-collapsible="accordion">
+        <li>
+            <div class="collapsible-header" style="border-bottom-style: solid;"><a href="{{ site.url }}{{ site.baseurl }}/embeds{{ post.url }}" target="preview-frame{{ post.url }}" style="display: block;"><i class="material-icons">pageview</i>Preview:
+            </a></div>
+            <div class="collapsible-body">
+                <iframe src="{{ site.url }}{{ site.baseurl }}/embeds{{ post.url }}" width="100%" height="400px" name="preview-frame{{ post.url }}" style="border-style: none;"></iframe>
+            </div> 
+        </li>
+        
+    </ul>
+
+      
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Got it!</a>
+    </div>
+</div>
 {% endfor %}
