--- a/_includes/front-call-to-action.html
+++ b/_includes/front-call-to-action.html
@@ -4,11 +4,11 @@
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <h2 class="section-heading">Hey there, Bruins!</h2>
                 <hr class="light">
-                <p class="text-faded">
+                <p> <!--class="text-faded"-->
                     We're WI+RE (Writing Instruction + Research Education), a collaborative UCLA community focused on helping all learners succeed in their writing and research projects.</p>
                     
-                <a href="#portfolio" class="btn btn-default btn-xl page-scroll">Get Started!</a>
-            </div>
+                <a href="{{ '/about' | prepend: site.baseurl}}" class="btn btn-default btn-xl page-scroll">Learn more about WI+RE!</a>
+            </div> 
         </div>
     </div>
 </section>
