--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -3,6 +3,7 @@ layout: default
 ---
 
 <h3>{{ page.title }}</h3>
+<p>{{ page.description }}</p>
 
 {% unless page.content == '' %}
   <p>{{ page.content }}</p>
