--- a/_includes/front-head.html
+++ b/_includes/front-head.html
@@ -16,6 +16,8 @@
     <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
     <!--Font Awesome-->
       <script src="https://use.fontawesome.com/c7408e4f19.js"></script>
+    <!-- Google Material Icons-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <!-- Plugin CSS -->
     <link rel="stylesheet" href="{{ "/assets/css/animate.min.css" | prepend: site.baseurl }}" type="text/css">
