--- a/_includes/front-header.html
+++ b/_includes/front-header.html
@@ -3,7 +3,7 @@
         <div class="header-content-inner">
             <h1>Strategies for Research and Writing<!-- once we have decided on a new title change this to {{ site.title }} --></h1>
             <hr>
-            <p>Quick and practical research and writing advice, collaboratively designed by students and teachers at UCLA.<!-- once we have decided on a new title change this to {{ site.description }} --></p>
+            <p>Quick and practical research and writing advice, collaboratively designed by students, teachers, and librarians at UCLA.<!-- once we have decided on a new site.title and site.description change this to {{ site.description }} --></p>
        <a href="#about" class="btn btn-primary btn-xl page-scroll">Learn more</a> <!--<a href="#portfolio" class="btn btn-primary btn-xl page-scroll">Get started!</a>-->
         </div>
     </div>
