--- a/_includes/front-services.html
+++ b/_includes/front-services.html
@@ -2,7 +2,8 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Collections/Categories/...?</h2>
+                <h2 class="section-heading">Where would you like to start?</h2>
+                <p><em>Check out one of our themed collections, or see <a href="#">a list of all our tutorials</a>.</em></p>
                 <hr class="primary">
             </div>
         </div>
@@ -11,30 +12,39 @@
         <div class="row">
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i>
+                    <i class="fa fa-4x fa-lightbulb-o wow bounceIn text-primary"></i>
                     <h3><a href="{{ "/categories/getting-started" | prepend: site.baseurl}}">Getting Started</a></h3>
                     <p class="text-muted">Generating research questions, planning your project, and getting ready for research.</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
-                    <h3>Ready to Ship</h3>
-                    <p class="text-muted">You can use this theme as is, or you can make changes!</p>
+                    <i class="fa fa-4x fa-search wow bounceIn text-primary" data-wow-delay=".1s"></i>
+                    <h3>Finding Sources</h3>
+                    <p class="text-muted">Learn practical strategies to search for books, articles, and more.</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
-                    <h3>Up to Date</h3>
-                    <p class="text-muted">We update dependencies to keep things fresh.</p>
+                    <i class="fa fa-4x fa-pencil-square-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
+                    <h3>Writing and Citing Sources</h3>
+                    <p class="text-muted">Learn how to integrate your sources into your academic writing.</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
-                    <h3>Made with Love</h3>
-                    <p class="text-muted">You have to make your websites with love these days!</p>
+                    <i class="fa fa-4x fa-file-text-o wow bounceIn text-primary" data-wow-delay=".3s"></i>
+                    <h3>Literature Reviews</h3>
+                    <p class="text-muted">Get ready to analyze the literature on your topic and identify areas for future scholarship.</p>
+                </div>
+            </div>
+        </div>
+        <div class="row"> 
+            <div class="col-lg-12 col-md-12 text-center">
+                <div class="service-box">
+                    <i class="fa fa-4x fa-comments-o wow bounceIn text-primary" data-wow-delay=".4s"></i>
+                    <h3>Sharing your Research</h3>
+                    <p class="text-muted">A quick introduction to abstracts, elevator speeches, and opportunities to share your work.</p>
                 </div>
             </div>
         </div>
