improvements to front page
also working on categories

--- a/_includes/front-header.html
+++ b/_includes/front-header.html
@@ -1,10 +1,29 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h1>Strategies for Research and Writing<!-- once we have decided on a new title change this to {{ site.title }} --></h1>
+            <h1 style="text-transform: none;">Strategies for Writing and Research<!-- once we have decided on a new title change this to {{ site.title }} --></h1>
             <hr>
-            <p>Quick and practical research and writing advice, collaboratively designed by students, teachers, and librarians at UCLA.<!-- once we have decided on a new site.title and site.description change this to {{ site.description }} --></p>
-       <a href="#about" class="btn btn-primary btn-xl page-scroll">Learn more</a> <!--<a href="#portfolio" class="btn btn-primary btn-xl page-scroll">Get started!</a>-->
-        </div>
+            <p>Quick and practical writing and research strategies, collaboratively designed by students, teachers, and librarians at UCLA.<!-- once we have decided on a new site.title and site.description change this to {{ site.description }} --></p>
+            <!--<a href="#services" class="btn btn-primary btn-xl page-scroll">Get Started!</a>-->
+            <!--<a href="#portfolio" class="btn btn-primary btn-xl page-scroll">Get started!</a>-->
+                <div class="row">
+                    <div class="col-sm-4 text-center">
+                        <div class="service-box">
+                            <a href="#services" class="btn btn-primary btn-xl page-scroll">For students</a>
+                        </div>
+                    </div>
+                    <div class="col-sm-4 text-center">
+                        <div class="service-box">
+                            <a href="#services" class="btn btn-primary btn-xl page-scroll">For instructors</a>
+                        </div>
+                    </div>
+                    <div class="col-sm-4 text-center">
+                        <div class="service-box">
+                            <a href="#services" class="btn btn-primary btn-xl page-scroll">About us</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
     </div>
 </header>
