--- a/_includes/front-portfolio.html
+++ b/_includes/front-portfolio.html
@@ -1,16 +1,21 @@
 <section class="no-padding" id="portfolio">
     <div class="container-fluid">
         <div class="row no-gutter">
+            <div class="col-sm-12 text-center">
+                <h2 class="section-heading">Most Popular Strategies</h2>
+            </div>
+        </div>
+        <div class="row no-gutter">
             <div class="col-lg-4 col-sm-6">
-                <a href="{{ "/categories/getting-started" | prepend: site.baseurl}}" class="portfolio-box">
+                <a href="{{ "/research-planner" | prepend: site.baseurl}}" class="portfolio-box">
                     <img src="{{ "/assets/img/front/portfolio/1.jpg" | prepend: site.baseurl}}" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
+                            <!--<div class="project-category text-faded">
                                 Category:
-                            </div>
+                            </div>-->
                             <div class="project-name">
-                                Getting Started
+                                Research Paper Planner
                             </div>
                         </div>
                     </div>
@@ -21,11 +26,8 @@
                     <img src="{{ "/assets/img/front/portfolio/2.jpg" | prepend: site.baseurl}}" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                Category:
-                            </div>
                             <div class="project-name">
-                                Finding and Citing Sources
+                                Mapping Your Research Ideas
                             </div>
                         </div>
                     </div>
@@ -36,16 +38,17 @@
                     <img src="{{ "/assets/img/front/portfolio/3.jpg" | prepend: site.baseurl}}" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                Category
-                            </div>
                             <div class="project-name">
-                                Project
+                                Creating a Literature Review
+                            </div>
+                            <div class="project-category text-faded">
+                                Coming soon!
                             </div>
                         </div>
                     </div>
                 </a>
             </div>
+            <!-- another row of favorites
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
                     <img src="{{ "/assets/img/front/portfolio/4.jpg" | prepend: site.baseurl}}" class="img-responsive" alt="">
@@ -91,6 +94,7 @@
                     </div>
                 </a>
             </div>
+            -->
         </div>
     </div>
 </section>
