working on alternate homepage

--- a/_includes/front-nav.html
+++ b/_includes/front-nav.html
@@ -17,11 +17,12 @@
                <!-- <li>
                     <a class="page-scroll" href="#about">About</a>
                 </li>
+                 -->
                 <li>
-                    <a class="page-scroll" href="#services">Services</a>
-                </li> -->
+                    <a class="page-scroll" href="#services">For Students</a>
+                </li>
                 <li>
-                    <a class="page-scroll" href="#portfolio">Collections</a>
+                    <a class="page-scroll" href="#for-instructors">For Instructors</a>
                 </li>
                  <li>
                     <a class="page-scroll" href="#open">Open Access</a>
