--- a/_includes/front-services.html
+++ b/_includes/front-services.html
@@ -48,5 +48,14 @@
                 </div>
             </div>
         </div>
+        <!--
+        <div class="row">
+            <div class="col-lg-12">
+            <blockquote>
+                    I have been using these databases for years but these strategies and activities were very novel. It changed the way I analyzed my data and thought of new ideas.
+                </blockquote>
+            </div>
+        </div>
+        -->
     </div>
 </section>
