--- a/_includes/front-call-to-action.html
+++ b/_includes/front-call-to-action.html
@@ -2,7 +2,8 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2 class="section-heading">WI+RE provides instructors with easy to implement scaffolding for their research and writing assignments.</h2>
+                <div class="text-center"><i class="material-icons" style="font-size: 60px;">subscriptions</i></div>
+                <h2 class="section-heading">Improve student writing and research skills with our easy to implement online assignments.</h2>
                 <hr class="light">
                 <p><em>a graphic here showing integration of online modules into ccle</em></p>
 
