--- a/_includes/front-nav.html
+++ b/_includes/front-nav.html
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="#page-top">Research Tips &amp; Strategies</a>
+            <a class="navbar-brand page-scroll" href="#page-top">Strategies for Research &amp; Writing</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -24,13 +24,15 @@
                 <li>
                     <a class="page-scroll" href="#for-instructors">For Instructors</a>
                 </li>
+                <li>
+                    <a class="page-scroll" href="{{ site.baseurl }}/categories">All Strategies</a>
+                </li>
                  <li>
                     <a class="page-scroll" href="#open">Open Access</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#contact">Contact</a>
                 </li>
-                <li><a class="page-scroll" href="#">Index</a></li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
