--- a/_includes/front-services.html
+++ b/_includes/front-services.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">Where would you like to start?</h2>
-                <p><em>Check out one of our themed collections, or see <a href="#">a list of all our tutorials</a>.</em></p>
+                <p><em>Check out one of our themed collections, or see <a href="{{ site.baseurl}}/categories">a list of all our tutorials</a>.</em></p>
                 <hr class="primary">
             </div>
         </div>
@@ -20,21 +20,21 @@
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-search wow bounceIn text-primary" data-wow-delay=".1s"></i>
-                    <h3>Finding Sources</h3>
+                    <h3><a href="{{ "/categories/finding-and-citing-sources" | prepend: site.baseurl }}">Finding and Citing Sources</a></h3>
                     <p class="text-muted">Learn practical strategies to search for books, articles, and more.</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-pencil-square-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
-                    <h3>Writing and Citing Sources</h3>
-                    <p class="text-muted">Learn how to integrate your sources into your academic writing.</p>
+                    <h3><a href="{{ "/categories/writing-with-sources" | prepend: site.baseurl}}">Writing with Sources</a></h3>
+                    <p class="text-muted">Coming soon! Learn how to integrate your sources into your academic writing.</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-file-text-o wow bounceIn text-primary" data-wow-delay=".3s"></i>
-                    <h3>Literature Reviews</h3>
+                    <h3><a href="{{ "/categories/literature-reviews" | prepend: site.baseurl}}">Literature Reviews</a></h3>
                     <p class="text-muted">Get ready to analyze the literature on your topic and identify areas for future scholarship.</p>
                 </div>
             </div>
@@ -43,19 +43,10 @@
             <div class="col-lg-12 col-md-12 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-comments-o wow bounceIn text-primary" data-wow-delay=".4s"></i>
-                    <h3>Sharing your Research</h3>
+                    <h3><a href="{{ "/categories/sharing-your-research" | prepend: site.baseurl}}">Sharing your Research</a></h3>
                     <p class="text-muted">A quick introduction to abstracts, elevator speeches, and opportunities to share your work.</p>
                 </div>
             </div>
         </div>
-        <!--
-        <div class="row">
-            <div class="col-lg-12">
-            <blockquote>
-                    I have been using these databases for years but these strategies and activities were very novel. It changed the way I analyzed my data and thought of new ideas.
-                </blockquote>
-            </div>
-        </div>
-        -->
     </div>
 </section>
