--- a/_includes/front-open.html
+++ b/_includes/front-open.html
@@ -2,17 +2,18 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <h2 class="section-heading">As strong believers in open educational resources, all of our code is open source, and our tips can be shared, re-used, and re-mixed.</h2>
+                <h2 class="section-heading"><i class="fa fa-code" aria-hidden="true"></i></h2>
+                <h2 class="section-heading">As strong believers in open educational resources, all of our code is open source, and our tips can be shared, re-used, and re-mixed for free.</h2>
                 <hr class="primary">
                 <p class="text-faded">
   Our content is available through a Creative Commons Attribution-NonCommercial-ShareAlike license. 
                     <BR>
-  This site is built in <a href="http://jekyllrb.com">Jekyll</a>, hosted on <a href="http://github.com/uclalibrary/research-tips">Github</a> and themed with a modified version of <a href="http://jekyllthemes.org/themes/creative-theme/">Creative Theme</a>.
+  This site is built in <a href="http://jekyllrb.com">Jekyll</a> and hosted on <a href="http://github.com/uclalibrary/research-tips">Github pages</a>. The front page is based the lovely <a href="http://jekyllthemes.org/themes/creative-theme/">Creative Theme</a>, and sub-pages are built on a jekyll version of <a href="http://materializecss.com/" target="_blank">materialize css</a>.
                         <BR>
    Want to collaborate? Us too! <a href="https://goo.gl/forms/5mDfPqk838jzhB9X2">Let us know your ideas</a>!<BR>
                     </p>
                             <BR>
-                <a href="http://github.com/uclalibrary/research-tips" class="btn btn-default btn-xl">See our code!</a>
+                <a href="http://github.com/uclalibrary/research-tips" class="btn btn-default btn-xl"><i class="fa fa-github-alt" aria-hidden="true"></i> See our code!</a>
                   
             </div>
         </div>
