--- a/_includes/front-portfolio.html
+++ b/_includes/front-portfolio.html
@@ -2,10 +2,52 @@
     <div class="container-fluid">
         <div class="row no-gutter">
             <div class="col-sm-12 text-center">
-                <h2 class="section-heading">Most Popular Strategies</h2>
+                <h2 class="section-heading">Our Most Popular Strategies</h2>
             </div>
         </div>
         <div class="row no-gutter">
+            <div class="col-lg-4 col-sm-6">
+                <a href="{{ "/research-planner" | prepend: site.baseurl}}" class="portfolio-box">
+                    <img src="{{ "/assets/img/front/portfolio/1.jpg" | prepend: site.baseurl}}" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <!--<div class="project-category text-faded">
+                                Category:
+                            </div>-->
+                            <div class="project-name">
+                                Research Paper Planner
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <a href="#" class="portfolio-box">
+                    <img src="{{ "/assets/img/front/portfolio/2.jpg" | prepend: site.baseurl}}" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-name">
+                                Mapping Your Research Ideas
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <a href="#" class="portfolio-box">
+                    <img src="{{ "/assets/img/front/portfolio/3.jpg" | prepend: site.baseurl}}" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-name">
+                                Creating a Literature Review
+                            </div>
+                            <div class="project-category text-faded">
+                                Coming soon!
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="{{ "/research-planner" | prepend: site.baseurl}}" class="portfolio-box">
                     <img src="{{ "/assets/img/front/portfolio/1.jpg" | prepend: site.baseurl}}" class="img-responsive" alt="">
