--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -12,7 +12,7 @@ layout: default
 <!-- Create cards -->
 {% for post in site.categories[page.title] reversed %}
 <div class="row">
-    <div class="col s12 m12">
+    <div class="col s12">
       <div class="card">
         <div class="card-content">
             <span class="card-title"><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></span>
@@ -47,11 +47,10 @@ layout: default
 <!-- *** -->
 
 <hr>
-
 <div class="row">
-    {% if page.previous.url %}
+{% if page.previous.url and page.next.url %}
     <!-- Card 1 -->
-        <div class="col s6">
+        <div class="col s12 m6">
           <div class="card hoverable">
             <a href="{{ page.previous.url | prepend: site.baseurl }}">
                 <div class="card-content">
@@ -69,12 +68,8 @@ layout: default
             -->
           </div>
         </div>
-    {% endif %}
-    
-
-    {% if page.next.url %}  
         <!-- Card 2 -->
-            <div class="col s6"> <!-- offset-s6 should have worked -->
+            <div class="col s12 m6"> <!-- offset-s6 should have worked -->
           <div class="card hoverable">
               <a href="{{ page.next.url | prepend: site.baseurl }}">
               <div class="card-content" style="text-align: right;">
@@ -90,8 +85,36 @@ layout: default
             -->
           </div>
         </div>
-    {% endif %}
-    
+{% elsif page.previous.url == nil%}
+    <!-- Card 2 with no page previous -->
+            <div class="col s12 m6 offset-m6 offset-l6"> <!-- offset-s6 should have worked -->
+          <div class="card hoverable">
+              <a href="{{ page.next.url | prepend: site.baseurl }}">
+              <div class="card-content" style="text-align: right;">
+              <!--<span class="card-title waves-effect"><a href="{{ page.next.url | prepend: site.baseurl }}">{{ page.next.title }}&nbsp;<i class="material-icons">chevron_right</i></a></span>-->
+                  {{ page.next.title }}&nbsp;<i class="material-icons">chevron_right</i>
+            </div>
+            </a>
+            <!--
+            <div class="card-action">
+              <a href="#">This is a link</a>
+              <a href="#">This is a link</a>
+            </div>
+            -->
+          </div>
+        </div>
+{% elsif page.next.url == nil %}
+    <!-- Card 1 with no page next-->
+        <div class="col s12 m6">
+          <div class="card hoverable">
+            <a href="{{ page.previous.url | prepend: site.baseurl }}">
+                <div class="card-content">
+                <i class="material-icons">chevron_left</i>&nbsp;{{ page.previous.title }}
+            </div>
+                </a>
+          </div>
+        </div>
+{% endif %}
 </div>
     
 
