lots of updates
ready?

--- a/_includes/front-contact.html
+++ b/_includes/front-contact.html
@@ -8,19 +8,19 @@
               
             </div>
         <div class="col-lg-2 col-lg-offset-2 text-center">
-            <a href="https://twitter.com/{{ site.twitter_username }}">
+            <a href="https://twitter.com/{{ site.social.twitter }}" aria-label="WIREbruin on twitter">
                 <i class="fa fa-twitter fa-3x wow bounceIn" data-wow-delay=".1s"></i>
               
             </a>
         </div>
           <div class="col-lg-2 col-lg-offset-1 text-center">
-            <a href="https://facebook.com/{{ site.facebook_username }}">
+            <a href="https://facebook.com/{{ site.social.facebook }}" aria-label="WIREbruin on facebook">
             <i class="fa fa-facebook fa-3x wow bounceIn" data-wow-delay=".1s"></i>
               
             </a>
         </div>
             <div class="col-lg-2 col-lg-offset-1 text-center">
-            <a href="mailto:{{ site.email }}">
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSf53l5-aCg7NtToE7P_RdnSHewJvSlGrsm94O7UQaMMchwFZw/viewform?c=0&w=1" target="_blank" aria-label="Email the WI+RE team">
             <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
                
             </a>
