--- a/_includes/front-nav.html
+++ b/_includes/front-nav.html
@@ -19,7 +19,7 @@
                 </li>
                  -->
                 <li>
-                    <a class="page-scroll" href="#services">For Students</a>
+                    <a class="page-scroll" href="#for-students">For Students</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#for-instructors">For Instructors</a>
