--- a/_includes/front-for-instructors.html
+++ b/_includes/front-for-instructors.html
@@ -1,24 +1,21 @@
 <section class="bg-primary" id="for-instructors">
     <div class="container">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <div class="text-center"><i class="material-icons" style="font-size: 60px;">subscriptions</i></div>
+            <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 text-center">
                 <h2 class="section-heading">Improve student writing and research skills with our easy to implement online assignments.</h2>
                 <hr class="light">
-                <p><em>a graphic here showing integration of online modules into ccle</em></p>
-
-                <p> <!--class="text-faded"-->
+                    <img src="{{ "/assets/img/front/incorporating-research-and-writing-skills.png" | prepend: site.baseurl}}" class="img-responsive"  style="margin-bottom: 5px;" alt="Research and Writing Modules can be integrated into CCLE or other course sites."><br>
+                    <p> <!--class="text-faded"-->
                     Adding WI+RE modules to your CCLE site or integrating them into your syllabus is easy. Instructors from north and south campus have successfully included the modules as required, extra credit, and optional assignments.</p>
-            <h3>Instructor feedback</h3>
-            <blockquote>A quote here.</blockquote>
-            <blockquote>And another quote here.</blockquote>
+        <!--
+            <div class="text-left">
         <h3>Student feedback</h3>
         <p>95% of Psychology 188B students reported that the online modules incorporated into their CCLE site were helpful or very helpful with their research process.</p>
             <blockquote>“I have been using these databases for years but these strategies and activities were very novel. It changed the way I analyzed my data and thought of new ideas.” - student feedback</blockquote>
-            <blockquote>And another quote here.</blockquote>
-            <p>Contact the WI+RE team</a> to learn more about integrating WI+RE modules into your courses.</p>
+-->
+            <p>Contact the WI+RE team to learn more about integrating WI+RE modules into your courses.</p>
         <div class="text-center">
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSf53l5-aCg7NtToE7P_RdnSHewJvSlGrsm94O7UQaMMchwFZw/viewform?c=0&w=1" class="btn btn-default btn-xl page-scroll">Contact the WI+RE team</a>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSf53l5-aCg7NtToE7P_RdnSHewJvSlGrsm94O7UQaMMchwFZw/viewform?c=0&w=1" class="btn btn-default btn-xl">Contact the WI+RE team</a>
         </div>
     </div> 
         </div>
