--- a/_includes/front-for-students.html
+++ b/_includes/front-for-students.html
@@ -1,29 +1,30 @@
-<section id="services">
+<section id="for-students">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">Where would you like to start?</h2>
-                <p><em>Check out one of our themed collections, or see <a href="{{ site.baseurl}}/categories">a list of all our tutorials</a>.</em></p>
+                <p><em>Check out one of our themed collections<!--, start with one of our <a href="#features" class="page-scroll">most popular strategies</a>--> or see <a href="{{ site.baseurl}}/categories">a list of all our tutorials</a>.</em></p>
                 <hr class="primary">
             </div>
         </div>
     </div>
     <div class="container">
         <div class="row">
-            <div class="col-lg-3 col-md-6 text-center">
+            <div class="col-md-4 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-lightbulb-o wow bounceIn text-primary"></i>
                     <h3><a href="{{ "/categories/getting-started" | prepend: site.baseurl}}">Getting Started</a></h3>
                     <p class="text-muted">Generating research questions, planning your project, and getting ready for research.</p>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6 text-center">
+            <div class="col-md-4 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-search wow bounceIn text-primary" data-wow-delay=".1s"></i>
                     <h3><a href="{{ "/categories/finding-and-citing-sources" | prepend: site.baseurl }}">Finding and Citing Sources</a></h3>
                     <p class="text-muted">Learn practical strategies to search for books, articles, and more.</p>
                 </div>
             </div>
+            <!-- coming soon!
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-pencil-square-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
@@ -31,7 +32,8 @@
                     <p class="text-muted">Coming soon! Learn how to integrate your sources into your academic writing.</p>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6 text-center">
+            -->
+            <div class="col-md-4 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-file-text-o wow bounceIn text-primary" data-wow-delay=".3s"></i>
                     <h3><a href="{{ "/categories/literature-reviews" | prepend: site.baseurl}}">Literature Reviews</a></h3>
