--- a/_includes/front-header.html
+++ b/_includes/front-header.html
@@ -9,7 +9,7 @@
                 <div class="row">
                     <div class="col-sm-4 text-center">
                         <div class="service-box">
-                            <a href="#services" class="btn btn-primary btn-xl page-scroll">For students</a>
+                            <a href="#for-students" class="btn btn-primary btn-xl page-scroll">For students</a>
                         </div>
                     </div>
                     <div class="col-sm-4 text-center">
