taking out the features thing
too busy

--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -7,8 +7,10 @@
   {% include front-nav.html %}
   {% include front-header.html %}
   {% include front-for-students.html %}
+  <!-- taking this out for now - may improve this in the future
   {% include front-features.html %}
-  {% include front-for-instructors.html %} <!-- About WI+RE -->
+  -->
+  {% include front-for-instructors.html %} 
   {% include front-open.html %}
   {% include front-contact.html %}
   {% include front-scripts.html %}
