added target blank

--- a/_includes/front-contact.html
+++ b/_includes/front-contact.html
@@ -8,13 +8,13 @@
               
             </div>
         <div class="col-lg-2 col-lg-offset-2 text-center">
-            <a href="https://twitter.com/{{ site.social.twitter }}" aria-label="WIREbruin on twitter">
+            <a href="https://twitter.com/{{ site.social.twitter }}" target="_blank" aria-label="WIREbruin on twitter">
                 <i class="fa fa-twitter fa-3x wow bounceIn" data-wow-delay=".1s"></i>
               
             </a>
         </div>
           <div class="col-lg-2 col-lg-offset-1 text-center">
-            <a href="https://facebook.com/{{ site.social.facebook }}" aria-label="WIREbruin on facebook">
+            <a href="https://facebook.com/{{ site.social.facebook }}" target="_blank" aria-label="WIREbruin on facebook">
             <i class="fa fa-facebook fa-3x wow bounceIn" data-wow-delay=".1s"></i>
               
             </a>
