--- a/_includes/front-for-students.html
+++ b/_includes/front-for-students.html
@@ -13,7 +13,7 @@
             <div class="col-md-4 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-lightbulb-o wow bounceIn text-primary"></i>
-                    <h3><a href="{{ "/categories/getting-started" | prepend: site.baseurl}}">Getting Started</a></h3>
+                    <h3><a href="{{ "/categories/getting-started" | prepend: site.baseurl}}"><u>Getting Started</u></a></h3>
                     <p class="text-muted">Generating research questions, planning your project, and getting ready for research.</p>
                 </div>
             </div>
