--- a/_includes/front-header.html
+++ b/_includes/front-header.html
@@ -19,7 +19,7 @@
                     </div>
                     <div class="col-sm-4 text-center">
                         <div class="service-box">
-                            <a href="/categories" class="btn btn-primary btn-xl page-scroll">All Tutorials</a>
+                            <a href="/research-tips/categories" class="btn btn-primary btn-xl page-scroll">All Tutorials</a>
                         </div>
                     </div>
                 </div>
