--- a/assets/css/front-main.scss
+++ b/assets/css/front-main.scss
@@ -13,7 +13,7 @@
 
 // $text-color:       #111;
 // $background-color: #fdfdfd;
-// $brand-color:      #3C3F41;
+// $brand-color:      #2a7ea2;
 
 // $grey-color:       #828282;
 // $grey-color-light: lighten($grey-color, 40%);
