--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col l6 s12">
         <!--<h5 class="white-text"> {{ site.title }} </h5>-->
-        <p class="grey-text text-lighten-4"> {{ site.description }}. </p>
+        <p class="grey-text text-lighten-4"> {{ site.description }}</p>
       </div>
 
 <div class="col l4 offset-l2 s12">
