--- a/_includes/front-header.html
+++ b/_includes/front-header.html
@@ -22,6 +22,11 @@
                             <a href="/research-tips/categories" class="btn btn-primary btn-xl page-scroll">All Tutorials</a>
                         </div>
                     </div>
+                     <div class="col-sm-4 text-center">
+                        <div class="service-box">
+                            <a href="/research-tips/handouts" class="btn btn-primary btn-xl page-scroll">Handouts</a>
+                        </div>
+                    </div>
                 </div>
             </div>
 
