--- a/_includes/front-nav.html
+++ b/_includes/front-nav.html
@@ -27,6 +27,9 @@
                 <li>
                     <a class="page-scroll" href="{{ site.baseurl }}/categories">All Tutorials</a>
                 </li>
+                <li>
+                    <a class="page-scroll" href="{{ site.baseurl }}/handouts">Handouts</a>
+                </li>
                  <li>
                     <a class="page-scroll" href="#open">Open Access</a>
                 </li>
