--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -15,9 +15,11 @@ layout: default
     <div class="col s12">
       <div class="card">
         <div class="card-content">
+            <!-- experiment with thumbnail image
             <div class="col s3">
             <p>test</p>
             </div>
+            -->
             <span class="card-title"><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></span>
           <p class="description">{% if post.description %}{{ post.description | strip_html | strip_newlines | truncate: 250 }}{% else %}{{ post.content | strip_html | strip_newlines | truncate: 250 }}{% endif %}</p>
         </div>
