adding cc font awesome icons

--- a/_includes/front-open.html
+++ b/_includes/front-open.html
@@ -5,6 +5,7 @@
                 <h2 class="section-heading"><i class="fa fa-code" aria-hidden="true"></i></h2>
                 <h2 class="section-heading">As strong believers in open educational resources, all of our code is open source, and our tips can be shared, re-used, and re-mixed for free.</h2>
                 <hr class="primary">
+                <p><a href="https://creativecommons.org/licenses/by-nc-sa/3.0/us/" target="_blank"><i class="fab fa-creative-commons"></i><i class="fab fa-creative-commons-by"></i><i class="fab fa-creative-commons-nc"></i><i class="fab fa-creative-commons-share"></i></a><p>
                 <p class="text-faded">
   Our content is available through a Creative Commons Attribution-NonCommercial-ShareAlike license. 
                     <BR>
