fixing FA github icon

--- a/_includes/front-open.html
+++ b/_includes/front-open.html
@@ -14,7 +14,7 @@
    Want to collaborate? Us too! <a href="https://goo.gl/forms/5mDfPqk838jzhB9X2">Let us know your ideas</a>!<BR>
                     </p>
                             <BR>
-                <a href="http://github.com/uclalibrary/research-tips" class="btn btn-default btn-xl"><i class="fa fa-github-alt" aria-hidden="true"></i> See our code!</a>
+                <a href="http://github.com/uclalibrary/research-tips" class="btn btn-default btn-xl"><i class="fab fa-github-alt" aria-hidden="true"></i> See our code!</a>
                   
             </div>
         </div>
